--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.9
 jupyterlab_server==2.25.0
 kiwisolver==1.4.5
+lightgbm==4.1.0
 lxml==4.9.3
 MarkupSafe==2.1.3
 matplotlib==3.8.1
@@ -120,3 +121,4 @@ webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.6.4
 widgetsnbextension==4.0.9
+xgboost==2.0.1
